--- a/index.html
+++ b/index.html
@@ -2,109 +2,148 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>💘 Valentine Proposal 💘</title>
+<title>For My Kuttuuuuu ❤️</title>
+
 <style>
 body {
-    background: linear-gradient(135deg, #ffe6ea, #ffd6e0);
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    overflow: hidden;
+  margin: 0;
+  height: 100vh;
+  font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
-.card {
-    background: white;
-    padding: 35px;
-    border-radius: 20px;
-    text-align: center;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-    z-index: 2;
+
+.container {
+  text-align: center;
+  background: rgba(255,255,255,0.85);
+  padding: 25px;
+  border-radius: 20px;
+  box-shadow: 0 15px 40px rgba(0,0,0,0.2);
+  width: 90%;
+  max-width: 420px;
 }
+
 h1 {
-    color: #e6396f;
-    font-size: 26px;
+  color: #e91e63;
+  margin-bottom: 10px;
 }
-p {
-    font-size: 20px;
-    color: #ff4d6d;
-    font-weight: bold;
+
+.slideshow {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  margin: 15px 0;
+  border-radius: 15px;
+  overflow: hidden;
 }
+
+.slideshow img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
+}
+
+.slideshow img.active {
+  opacity: 1;
+}
+
 button {
-    font-size: 18px;
-    padding: 10px 25px;
-    margin: 12px;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
+  background: #e91e63;
+  color: white;
+  border: none;
+  padding: 12px 22px;
+  margin: 8px;
+  border-radius: 25px;
+  font-size: 16px;
+  cursor: pointer;
 }
-#yes {
-    background: #ff4d6d;
-    color: white;
+
+button:hover {
+  background: #c2185b;
 }
-#no {
-    background: #adb5bd;
-    color: white;
-    position: absolute;
+
+#final {
+  display: none;
+  font-size: 22px;
+  color: #e91e63;
+  margin-top: 15px;
+  font-weight: bold;
 }
-.hearts {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-}
+
 .heart {
-    position: absolute;
-    font-size: 24px;
-    animation: floatUp 4s linear infinite;
+  position: fixed;
+  font-size: 20px;
+  animation: float 4s linear forwards;
 }
-@keyframes floatUp {
-    from { transform: translateY(100vh); opacity: 1; }
-    to { transform: translateY(-10vh); opacity: 0; }
+
+@keyframes float {
+  0% { transform: translateY(0); opacity: 1; }
+  100% { transform: translateY(-100vh); opacity: 0; }
 }
 </style>
 </head>
 
 <body>
 
-<div class="card" id="card">
-    <h1>Will you be my Valentine? 💖</h1>
-    <button id="yes" onclick="showLove()">YES 💕</button>
-    <button id="no" onmouseover="moveNo()">NO 🙈</button>
+<div class="container">
+  <h1>Kuttuuuuu ❤️</h1>
+  <p>You make my world beautiful ✨</p>
+
+  <div class="slideshow">
+    <img src="IMG_2325.jpeg" class="active">
+    <img src="IMG_2322.jpeg">
+    <img src="IMG_2275.jpeg">
+    <img src="IMG_2270.jpeg">
+    <img src="IMG_2126.jpeg">
+    <img src="PHOTO-2025-11-26-23-00-16.jpeg">
+    <img src="PHOTO-2025-11-26-23-00-16_Original.jpeg">
+    <img src="IMG_1582.jpeg">
+  </div>
+
+  <button onclick="playSong()">▶ Play Our Song</button>
+  <button onclick="showLove()">Yes ❤️</button>
+
+  <div id="final">I love you Kuttuuuuu ❤️ Forever & Always</div>
 </div>
 
-<div class="hearts" id="hearts"></div>
-
 <script>
-function showLove() {
-    document.getElementById("card").innerHTML = `
-        <h1>I LOVE YOU ❤️</h1>
-        <p>Forever and always 🥰</p>
-    `;
-    startHearts();
+let slides = document.querySelectorAll('.slideshow img');
+let index = 0;
+
+setInterval(() => {
+  slides[index].classList.remove('active');
+  index = (index + 1) % slides.length;
+  slides[index].classList.add('active');
+}, 3000);
+
+function playSong() {
+  window.open(
+    "https://www.youtube.com/results?search_query=pehli+nazar+mein+race",
+    "_blank"
+  );
 }
 
-function moveNo() {
-    const x = Math.random() * (window.innerWidth - 100);
-    const y = Math.random() * (window.innerHeight - 100);
-    const noBtn = document.getElementById("no");
-    noBtn.style.left = x + "px";
-    noBtn.style.top = y + "px";
+function showLove() {
+  document.getElementById("final").style.display = "block";
+  startHearts();
 }
 
 function startHearts() {
-    const hearts = document.getElementById("hearts");
-    setInterval(() => {
-        const heart = document.createElement("div");
-        heart.className = "heart";
-        heart.innerHTML = "❤️";
-        heart.style.left = Math.random() * 100 + "vw";
-        hearts.appendChild(heart);
-        setTimeout(() => heart.remove(), 4000);
-    }, 300);
+  setInterval(() => {
+    const heart = document.createElement("div");
+    heart.className = "heart";
+    heart.innerHTML = "❤️";
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.bottom = "0";
+    document.body.appendChild(heart);
+    setTimeout(() => heart.remove(), 4000);
+  }, 300);
 }
 </script>
 
