--- a/index.html
+++ b/index.html
@@ -2,148 +2,87 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>For My Kuttuuuuu ❤️</title>
+<title>Kuttuuuuu ❤️</title>
 
 <style>
 body {
-  margin: 0;
-  height: 100vh;
-  font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
+    margin: 0;
+    height: 100vh;
+    background: linear-gradient(135deg, #ffb6c1, #ffe4e9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, sans-serif;
 }
 
-.container {
-  text-align: center;
-  background: rgba(255,255,255,0.85);
-  padding: 25px;
-  border-radius: 20px;
-  box-shadow: 0 15px 40px rgba(0,0,0,0.2);
-  width: 90%;
-  max-width: 420px;
+.card {
+    background: white;
+    padding: 30px;
+    border-radius: 20px;
+    text-align: center;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+    width: 300px;
 }
 
 h1 {
-  color: #e91e63;
-  margin-bottom: 10px;
+    color: #e91e63;
 }
 
-.slideshow {
-  position: relative;
-  width: 100%;
-  height: 300px;
-  margin: 15px 0;
-  border-radius: 15px;
-  overflow: hidden;
-}
-
-.slideshow img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0;
-  transition: opacity 1.5s ease-in-out;
-}
-
-.slideshow img.active {
-  opacity: 1;
+p {
+    font-size: 18px;
+    color: #333;
+    margin: 20px 0;
 }
 
 button {
-  background: #e91e63;
-  color: white;
-  border: none;
-  padding: 12px 22px;
-  margin: 8px;
-  border-radius: 25px;
-  font-size: 16px;
-  cursor: pointer;
+    padding: 10px 18px;
+    border-radius: 20px;
+    border: none;
+    font-size: 14px;
+    cursor: pointer;
+    margin: 5px;
 }
 
-button:hover {
-  background: #c2185b;
+#yes {
+    background: #e91e63;
+    color: white;
 }
 
-#final {
-  display: none;
-  font-size: 22px;
-  color: #e91e63;
-  margin-top: 15px;
-  font-weight: bold;
+#no {
+    background: #ccc;
 }
 
-.heart {
-  position: fixed;
-  font-size: 20px;
-  animation: float 4s linear forwards;
-}
-
-@keyframes float {
-  0% { transform: translateY(0); opacity: 1; }
-  100% { transform: translateY(-100vh); opacity: 0; }
+#message {
+    margin-top: 20px;
+    font-size: 18px;
+    color: #e91e63;
+    display: none;
 }
 </style>
 </head>
 
 <body>
 
-<div class="container">
-  <h1>Kuttuuuuu ❤️</h1>
-  <p>You make my world beautiful ✨</p>
+<div class="card">
+    <h1>Kuttuuuuu ❤️</h1>
+    <p>Will you be my Valentine?</p>
 
-  <div class="slideshow">
-    <img src="IMG_2325.jpeg" class="active">
-    <img src="IMG_2322.jpeg">
-    <img src="IMG_2275.jpeg">
-    <img src="IMG_2270.jpeg">
-    <img src="IMG_2126.jpeg">
-    <img src="PHOTO-2025-11-26-23-00-16.jpeg">
-    <img src="PHOTO-2025-11-26-23-00-16_Original.jpeg">
-    <img src="IMG_1582.jpeg">
-  </div>
+    <button id="yes" onclick="yesClick()">Yes ❤️</button>
+    <button id="no" onmouseover="moveNo()">No 🙈</button>
 
-  <button onclick="playSong()">▶ Play Our Song</button>
-  <button onclick="showLove()">Yes ❤️</button>
-
-  <div id="final">I love you Kuttuuuuu ❤️ Forever & Always</div>
+    <div id="message">You just made me the happiest 💖</div>
 </div>
 
 <script>
-let slides = document.querySelectorAll('.slideshow img');
-let index = 0;
-
-setInterval(() => {
-  slides[index].classList.remove('active');
-  index = (index + 1) % slides.length;
-  slides[index].classList.add('active');
-}, 3000);
-
-function playSong() {
-  window.open(
-    "https://www.youtube.com/results?search_query=pehli+nazar+mein+race",
-    "_blank"
-  );
+function yesClick() {
+    document.getElementById("message").style.display = "block";
 }
 
-function showLove() {
-  document.getElementById("final").style.display = "block";
-  startHearts();
-}
-
-function startHearts() {
-  setInterval(() => {
-    const heart = document.createElement("div");
-    heart.className = "heart";
-    heart.innerHTML = "❤️";
-    heart.style.left = Math.random() * 100 + "vw";
-    heart.style.bottom = "0";
-    document.body.appendChild(heart);
-    setTimeout(() => heart.remove(), 4000);
-  }, 300);
+function moveNo() {
+    const btn = document.getElementById("no");
+    btn.style.position = "absolute";
+    btn.style.left = Math.random() * 80 + "%";
+    btn.style.top = Math.random() * 80 + "%";
 }
 </script>
 
