--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {
     border-radius: 20px;
     text-align: center;
     box-shadow: 0 20px 40px rgba(0,0,0,0.2);
-    width: 300px;
+    width: 320px;
 }
 
 h1 {
@@ -54,9 +54,17 @@ button {
 
 #message {
     margin-top: 20px;
+    font-size: 15px;
+    color: #444;
+    display: none;
+    line-height: 1.5;
+}
+
+.love {
+    margin-top: 15px;
     font-size: 18px;
     color: #e91e63;
-    display: none;
+    font-weight: bold;
 }
 </style>
 </head>
@@ -70,7 +78,13 @@ button {
     <button id="yes" onclick="yesClick()">Yes ❤️</button>
     <button id="no" onmouseover="moveNo()">No 🙈</button>
 
-    <div id="message">You just made me the happiest 💖</div>
+    <div id="message">
+        You are the kind of beauty that goes beyond looks —  
+        in your smile, your kindness, and the way you make everything feel warm and safe.  
+        Every moment with you feels special, and my world feels brighter just because you’re in it.
+
+        <div class="love">I love you shonaa 🫶🏻😚</div>
+    </div>
 </div>
 
 <script>
